Add comprehensive documentation for startup parameters and configuration
- Added documentation for multiple datasources configuration
- Detailed JVM memory settings configuration with recommendations
- GC (Garbage Collection) options for different algorithms (G1GC, ParallelGC, CMS)
- System properties configuration examples
- Classpath configuration and usage examples
- Configuration file directory usage guide
- Updated all database examples to use DATASOURCES list format

Documentation includes:
- Memory settings recommendations for dev/prod environments
- GC algorithm selection guide
- Common system properties reference
- Complete configuration examples
- Application integration examples

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>